bk_ida/gccida/g1/simplify_if_then_else
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_if_then_else/src/combine.c:5110:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v6; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_if_then_else/src/combine.c:5126:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class v23; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_if_then_else/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_if_then_else/src/combine.c:5136:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v33; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_if_then_else/src/combine.c:5137:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v34; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_if_then_else/src/combine.c:5138:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v35; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_if_then_else/src/combine.c:5139:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v36; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_if_then_else/src/combine.c:5162:4: error: expected ';' after expression
rtx compound_operation; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_if_then_else/src/combine.c:5162:5: error: use of undeclared identifier 'compound_operation'; did you mean 'make_compound_operation'?
rtx compound_operation; // rbp 
    ^~~~~~~~~~~~~~~~~~
    make_compound_operation
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_if_then_else/src/combine.c:367:12: note: 'make_compound_operation' declared here
static rtx make_compound_operation  PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_if_then_else/src/combine.c:5163:4: error: expected ';' after expression
rtx v60; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_if_then_else/src/combine.c:5163:5: error: use of undeclared identifier 'v60'
rtx v60; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_if_then_else/src/combine.c:5173:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code za; // [rsp+8h] [rbp-70h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_if_then_else/src/combine.c:5174:4: error: expected ';' after expression
rtx zb; // [rsp+8h] [rbp-70h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_if_then_else/src/combine.c:5174:5: error: use of undeclared identifier 'zb'
rtx zb; // [rsp+8h] [rbp-70h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_if_then_else/src/combine.c:5175:1: error: must use 'enum' tag to refer to type 'mode_class'
mode_class cond_op0; // [rsp+10h] [rbp-68h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_if_then_else/src/machmode.h:52:30: note: enum 'mode_class' is hidden by a non-type declaration of 'mode_class' here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_if_then_else/src/combine.c:5176:4: error: expected ';' after expression
rtx cond_op0a; // [rsp+10h] [rbp-68h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_if_then_else/src/combine.c:5176:5: error: use of undeclared identifier 'cond_op0a'; did you mean 'cond_op0'?
rtx cond_op0a; // [rsp+10h] [rbp-68h] 
    ^~~~~~~~~
    cond_op0
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_if_then_else/src/combine.c:5175:12: note: 'cond_op0' declared here
mode_class cond_op0; // [rsp+10h] [rbp-68h] 
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_if_then_else/src/combine.c:5178:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode m; // [rsp+1Ch] [rbp-5Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_if_then_else/src/combine.c:5191:12: error: expected ';' after expression
v4 = ( rtx)x[1]; 
           ^
           ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_if_then_else/src/combine.c:5198:26: error: use of undeclared identifier 'machine_mode'
return gen_binary( v6, ( machine_mode)v2, *( ( rtx *)rtwint + 1), *( ( rtx *)rtwint + 2)); 
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/simplify_if_then_else/src/obj/combine.o] Error 1
